--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   "eslintConfig": {
     "extends": "react-app"
   },
+  "homepage":"/data-explorer/build/",
   "browserslist": {
     "production": [
       ">0.2%",
