--- a/package.json
+++ b/package.json
@@ -8,8 +8,12 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@grpc/grpc-js": "^1.1.3",
     "core-js": "^3.6.5",
-    "vue": "^2.6.11"
+    "grpc-web": "^1.2.0",
+    "leaflet": "^1.6.0",
+    "vue": "^2.6.11",
+    "vuex": "^3.5.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
