--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "grpc-web": "^1.2.0",
     "leaflet": "^1.6.0",
     "vue": "^2.6.11",
+    "vue2-leaflet": "^2.5.2",
     "vuex": "^3.5.1"
   },
   "devDependencies": {
