--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "grpc-web": "^1.2.0",
     "leaflet": "^1.6.0",
     "vue": "^2.6.11",
+    "vue-form-generator": "^2.3.4",
     "vue2-leaflet": "^2.5.2",
     "vuex": "^3.5.1"
   },
