--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@grpc/grpc-js": "^1.1.3",
     "core-js": "^3.6.5",
+    "google-protobuf": "^3.13.0",
     "grpc-web": "^1.2.0",
     "leaflet": "^1.6.0",
     "nouislider": "^14.6.1",
