Changed the census proto back to the original, recreated the other filed using protoc and added a rule to the envoy.yaml to match the WHOLE request. Also started permissions.sh to automate deployment.

--- a/envoy.yaml
+++ b/envoy.yaml
@@ -20,7 +20,7 @@ static_resources:
             - name: local_service
               domains: ["*"]
               routes:
-              - match: { prefix: "/dataexplorer" }
+              - match: { prefix: "/census.Census/SpatialQuery" }
                 route: { cluster: gRPCServiceForDatasetExplorer }
               - match: { prefix: "/census" }
                 route: { cluster: TargetedQueryServiceCensus }
