--- a/envoy.yaml
+++ b/envoy.yaml
@@ -23,8 +23,8 @@ static_resources:
               routes:
               - match: { prefix: "/sustain.Sustain" }
                 route: { cluster: gRPCServiceForMap2,
-                         timeout: 0,
-                         max_grpc_timeout: 0}
+                         timeout: 0s,
+                         max_grpc_timeout: 0s}
               - match: { prefix: "/census.Census/SpatialQuery" }
                 route: { cluster: gRPCServiceForDatasetExplorer }
               - match: { prefix: "/census" }
